--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "compress": "^0.99.0",
-    "concat-stream": "^1.5.1",
-    "debug": "~0.7.4",
-    "ejs": "~2.5.5",
-    "finalhandler": "^1.0.3",
+    "concat-stream": "^1.6.0",
+    "debug": "^0.7.4",
+    "ejs": "^2.5.7",
+    "finalhandler": "^1.0.4",
     "lodash": "^3.10.1",
-    "request": ">=2.9.0",
-    "sax": ">=0.6",
+    "request": "^2.81.0",
+    "sax": "^1.2.4",
     "selectn": "^0.9.6",
-    "serve-static": "^1.11.1",
-    "strip-bom": "~0.3.1",
-    "uuid": "^3.0.1",
-    "xml-crypto": "~0.8.0"
+    "serve-static": "^1.12.4",
+    "strip-bom": "^0.3.1",
+    "uuid": "^3.1.0",
+    "xml-crypto": "^0.8.5"
   },
   "repository": {
     "type": "git",
@@ -51,7 +51,7 @@
     "express": "^4.14.0",
     "glob": "~3.2.8",
     "istanbul": "^0.4.1",
-    "jshint": "2.3.0",
+    "jshint": "^2.9.5",
     "mocha": "~1.17.0",
     "readable-stream": "~2.0.2",
     "semver": "~5.0.3",
