--- a/.jshintrc
+++ b/.jshintrc
@@ -1,4 +1,5 @@
 {
+  "esversion":6,
   "bitwise":false,
   "boss":true,
   "expr":true,
@@ -17,13 +18,14 @@
   "strict": true,
   "trailing":true,
   "undef":true,
+  "varstmt":true,
   "predef": [
-    "describe",         // Used by mocha
-    "it",               // Used by mocha
-    "xit",               // Used by mocha
-    "before",           // Used by mocha
-    "beforeEach",       // Used by mocha
-    "after",            // Used by mocha
-    "afterEach"         // Used by mocha
+    "describe",
+    "it",
+    "xit",
+    "before",
+    "beforeEach",
+    "after",
+    "afterEach"
   ]
 }
